flash msg color coord, some msg polishing

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,11 +25,15 @@ body
 
 .alert-error
   color: white
-  background-color: red
+  background-color: rgb(153, 0, 0)
+  border-color: rgb(143, 0, 0)
+  font-size: 16px
 
 .alert-success
   color: white
-  background-color: blue
+  background-color: rgb(42, 159, 214)
+  border-color: rgb(31, 121, 163)
+  font-size: 16px
 
 .submit_button
   margin-top: 20px
@@ -40,6 +44,8 @@ body
   img
     padding-top: 5px
     max-height: 50px
+  p
+    padding-top: 20px
 
 // ARTS
 
@@ -77,4 +83,12 @@ body
 .welcome_index
   span
     font-weight: bold
-    color: blue
+    color: #2a9fd6
+  .jumbotron
+    background-color: #060606
+    height: 100vh
+    margin-top: -20px
+    margin-bottom: -20px
+    text-align: center
+  .container-index
+    display: inline-block
