--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -12,6 +12,6 @@
     <%= f.text_area :answer, class:"form-control"%>
   </div>
   <div class="submit_button">
-    <%= f.submit "Save Question", class: "btn btn-default" %>
+    <%= f.submit "Save question", class: "btn btn-default" %>
   </div>
 <% end %>
