added slack button, working on auth tokens

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -43,6 +43,10 @@ body
 .submit_button
   margin-top: 20px
 
+// SLACK BUTTON
+#slack-button
+  margin-right: 15px
+
 // FOOTER
 .footer
   height: 60px
