--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,9 @@
       </div><!-- /.container-fluid -->
     </nav>
 
+  <div id="slack-button" class="pull-right">
+    <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands,bot&client_id=42160307715.52852533251"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+  </div>
   <div class="container <%= controller_name %>_<%= action_name %>">
     <div>
       <% flash.each do |key, value| %>
